Bug 216397 - [GTK] Timeouts after reftest-wait class enablement in r266817
Summary: [GTK] Timeouts after reftest-wait class enablement in r266817
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-10 22:22 PDT by Lauro Moura
Modified: 2020-09-12 00:08 PDT (History)
5 users (show)

See Also:


Attachments
Patch (7.66 KB, patch)
2020-09-11 06:59 PDT, Carlos Garcia Campos
aperez: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Lauro Moura 2020-09-10 22:22:02 PDT
Throught builds 15760 to 15767, these are the common timeouts in these build runs:

imported/w3c/web-platform-tests/css/css-animations/animation-delay-009.html
imported/w3c/web-platform-tests/css/css-animations/animation-delay-010.html
imported/w3c/web-platform-tests/css/css-color-adjust/rendering/dark-color-scheme/color-scheme-change-checkbox.html
imported/w3c/web-platform-tests/css/css-display/display-none-inline-img.html
imported/w3c/web-platform-tests/css/css-lists/change-list-descendant-display.html
imported/w3c/web-platform-tests/css/css-overflow/dynamic-visible-to-clip-001.html
imported/w3c/web-platform-tests/css/css-position/fixed-z-index-blend.html
imported/w3c/web-platform-tests/css/css-position/position-sticky-fixed-ancestor-iframe.html
imported/w3c/web-platform-tests/css/css-position/position-sticky-fixed-ancestor.html
imported/w3c/web-platform-tests/css/css-position/position-sticky-scroll-reposition.html
imported/w3c/web-platform-tests/css/css-position/position-sticky-scroll-with-clip-and-abspos.html
imported/w3c/web-platform-tests/css/css-position/z-index-blend-will-change-overlapping-layers.html
imported/w3c/web-platform-tests/css/css-pseudo/first-line-change-inline-color-nested.html
imported/w3c/web-platform-tests/css/css-pseudo/first-line-change-inline-color.html
imported/w3c/web-platform-tests/css/css-sizing/contain-intrinsic-size/contain-intrinsic-size-013.html
imported/w3c/web-platform-tests/css/css-transitions/root-color-transition.html
imported/w3c/web-platform-tests/css/css-ui/resize-change-margin.html
imported/w3c/web-platform-tests/css/css-ui/text-overflow-017.html
imported/w3c/web-platform-tests/css/css-values/vh_not_refreshing_on_chrome.html
imported/w3c/web-platform-tests/html/rendering/replaced-elements/embedded-content-rendering-rules/canvas-update-with-border-object-fit.html
imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/image-compositing-change.html
imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/image-loading-lazy-slow-aspect-ratio.html
imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/image-loading-lazy-slow.html
imported/w3c/web-platform-tests/html/semantics/forms/the-option-element/dynamic-content-change-rendering.html
imported/w3c/web-platform-tests/html/semantics/forms/the-select-element/reset-algorithm-rendering.html
imported/w3c/web-platform-tests/mathml/presentation-markup/fractions/frac-bar-001.html
imported/w3c/web-platform-tests/web-animations/timing-model/animations/infinite-duration-animation.html
imported/w3c/web-platform-tests/web-animations/timing-model/animations/reverse-running-animation.html
imported/w3c/web-platform-tests/web-animations/timing-model/animations/sync-start-times.html
imported/w3c/web-platform-tests/web-animations/timing-model/animations/update-playback-rate-slow.html
Comment 1 Lauro Moura 2020-09-10 22:33:20 PDT
Gardened these tests in https://trac.webkit.org/changeset/266906
Comment 2 Carlos Garcia Campos 2020-09-11 06:59:31 PDT
Created attachment 408530 [details]
Patch
Comment 3 Adrian Perez 2020-09-11 14:15:40 PDT
Comment on attachment 408530 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=408530&action=review

> Tools/WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:1971
> +        RunLoop::current().dispatchAfter(1_ms, [] {

Usually we frown upon timers in testing code, but given that the reason
here is to make sure other things run and that the timeout is small and
unlikely to cause tests to run more slowly, I am willing to accept this
=]
Comment 4 Carlos Garcia Campos 2020-09-12 00:08:04 PDT
Committed r266974: <https://trac.webkit.org/changeset/266974>