[GTK] Timeouts after reftest-wait class enablement in r266817 https://bugs.webkit.org/show_bug.cgi?id=216397

Reviewed by Adrian Perez de Castro.

Tools:

Tests are timing out because dumpAfterWaitAttributeIsRemoved() is called recursively from a WebCore timer, not
allowing other sources with lower priority like display refresh monitor one to be run. This patch simply adds a
1 millisecond delay between dumpAfterWaitAttributeIsRemoved tries to allow other sources to be run in the main
loop.

* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::dumpAfterWaitAttributeIsRemoved):

LayoutTests:

Update expectations for tests that are now passing and failing.

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/229264@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266974 268f45cc-cd09-0410-ab3c-d52691b4dbfc